aws-saas/poc-files/docker-stuff/mscm/mscm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mscm-deployment
spec:
  selector:
    matchLabels:
      app: mscm
  replicas: 1
  template:
    metadata:
      labels:
        app: mscm
    spec:
      containers:
      - name: mscm
        resources:
          requests:
            memory: "4Gi"
        image: 213418823860.dkr.ecr.us-east-1.amazonaws.com/enmpoc1-registry:mscm-rhel6jboss
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
          - containerPort: 9990
          - containerPort: 4447
          - containerPort: 9999
          - containerPort: 56164
          - containerPort: 3528
          - containerPort: 58156
          - containerPort: 46001
          - containerPort: 54200
          - containerPort: 12987
          - containerPort: 63167
          - containerPort: 7600
          - containerPort: 57600
          - containerPort: 9443
          - containerPort: 4712
          - containerPort: 4713
          - containerPort: 3528
          - containerPort: 3529
          - containerPort: 59001
          - containerPort: 59010
          - containerPort: 55501
          - containerPort: 55500
        command: ["/bin/sh", "-c"]
        args:
          - bash /var/tmp/mscm_config.sh; while true; do sleep 300;done;
        volumeMounts:
          - name: pv-data
            mountPath: /ericsson/tor/data
          - name: pv-mdt
            mountPath: /etc/opt/ericsson/ERICmodeldeployment
          - name: pv-shared
            mountPath: /ericsson/home
          - name: pv-custom
            mountPath: /ericsson/custom
          - name: pv-dumps
            mountPath: /ericsson/enm/dumps
          - name: pv-dlms
            mountPath: /ericsson/enm/dlms/history/data
          - name: pv-batch
            mountPath: /ericsson/batch
          - name: pv-norollback
            mountPath: /ericsson/tor/no_rollback
          - name: pv-configmgt
            mountPath: /ericsson/config_mgt
          - name: pv-upgind
            mountPath: /ericsson/config_mgmt_upgind
          - name: pv-pmic1
            mountPath: /ericsson/pmic1
          - name: pv-pmic2
            mountPath: /ericsson/pmic2
          - name: pv-pmlinks
            mountPath: /ericsson/symvol
          - name: pv-smrs
            mountPath: /ericsson/tor/smrs
          - name: pv-ddcdata
            mountPath: /var/ericsson/ddc_data
          - name: pv-cron
            mountPath: /ericsson/vmcrons
      volumes:
        - name: pv-data
          persistentVolumeClaim:
            claimName: data
        - name: pv-mdt
          persistentVolumeClaim:
            claimName: mdt
        - name: pv-custom
          persistentVolumeClaim:
            claimName: custom
        - name: pv-dumps
          persistentVolumeClaim:
            claimName: dumps
        - name: pv-dlms
          persistentVolumeClaim:
            claimName: dlms
        - name: pv-batch
          persistentVolumeClaim:
            claimName: batch
        - name: pv-norollback
          persistentVolumeClaim:
            claimName: norollback
        - name: pv-configmgt
          persistentVolumeClaim:
            claimName: config-mgt
        - name: pv-shared
          persistentVolumeClaim:
            claimName: shared
        - name: pv-upgind
          persistentVolumeClaim:
            claimName: upgind
        - name: pv-pmic1
          persistentVolumeClaim:
            claimName: pmic1
        - name: pv-pmic2
          persistentVolumeClaim:
            claimName: pmic2
        - name: pv-pmlinks
          persistentVolumeClaim:
            claimName: pmlinks
        - name: pv-smrs
           persistentVolumeClaim:
             claimName: smrs
        - name: pv-ddcdata
          persistentVolumeClaim:
            claimName: ddcdata
        - name: pv-cron
          persistentVolumeClaim:
            claimName: vmcrons
