aws-saas/poc-files/docker-stuff/mscm/mscm-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mscm-ingress-1
spec:
  backend:
    serviceName: mscm-port-1
    servicePort: 58170
